fix: change spacing in startnow component

--- a/src/image-slider.scss
+++ b/src/image-slider.scss
@@ -12,9 +12,6 @@
     .swiper-pagination {
         color: rgb(255, 255, 255);
     }
-    .swiper-pagination {
-        // padding-top: 10px;
-    }
     .swiper-pagination-bullet {
         padding: 0px 10px;
         border-radius: 4px;
